--- a/requirements.txt
+++ b/requirements.txt
@@ -7,21 +7,33 @@ cffi==2.0.0
 charset-normalizer==3.4.4
 cryptography==46.0.3
 cssselect2==0.8.0
-Django==5.0.6
+Django==5.2.7
 django-environ==0.12.0
+django-extensions==4.1
+django-filter==25.2
+djangorestframework==3.16.1
+djangorestframework_simplejwt==5.5.1
+drf-yasg==1.21.11
 freetype-py==2.5.1
 html5lib==1.1
 idna==3.11
+inflection==0.5.1
 lxml==6.0.2
+Markdown==3.9
+MarkupSafe==3.0.3
 mysqlclient==2.2.7
 oscrypto==1.3.0
+packaging==25.0
 pillow==12.0.0
 pycairo==1.28.0
 pycparser==2.23
 pyHanko==0.31.0
 pyhanko-certvalidator==0.29.0
+PyJWT==2.10.1
+pyOpenSSL==25.3.0
 pypdf==6.1.1
 python-bidi==0.6.6
+pytz==2025.2
 PyYAML==6.0.3
 reportlab==4.4.4
 requests==2.32.5
@@ -32,7 +44,9 @@ svglib==1.6.0
 tinycss2==1.4.0
 typing_extensions==4.15.0
 tzlocal==5.3.1
+uritemplate==4.2.0
 uritools==5.0.0
 urllib3==2.5.0
 webencodings==0.5.1
+Werkzeug==3.1.3
 xhtml2pdf==0.2.17
